--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "cc2e9be3-cec3-46ca-a632-013dfe98f66f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
